# Cre-ACEMBLER

./: .gitignore  Makefile.am  autogen.sh  configure.ac  cre-acembler.in  crerecembl.in  edit.mak  installer.nsi.in  setup.py  setup.py.in
CreACEMBLER/: Makefile.am  circular_permutations.py  seq.py
CreACEMBLER/ui/: Makefile.am  ui.py.in
CreRecEMBL/: Makefile.am  circular_permutations.py  seq.py
CreRecEMBL/ui/: Makefile.am  ui.py.in
data/: Makefile.am  cre-acembler.desktop.in  cre-acembler.ui  cre_assistant.ui  crerecembl.desktop  crerecembl.ui
data/icons/: Makefile.am
data/icons/hicolor/: Makefile.am
data/icons/hicolor/128x128/apps/: Makefile.am
data/icons/hicolor/16x16/actions/: Makefile.am
data/icons/hicolor/16x16/apps/: Makefile.am
data/icons/hicolor/22x22/actions/: Makefile.am
data/icons/hicolor/22x22/apps/: Makefile.am
data/icons/hicolor/24x24/actions/: Makefile.am
data/icons/hicolor/24x24/apps/: Makefile.am
data/icons/hicolor/256x256/apps/: Makefile.am
data/icons/hicolor/32x32/actions/: Makefile.am
data/icons/hicolor/32x32/apps/: Makefile.am
data/icons/hicolor/48x48/apps/: Makefile.am
data/icons/hicolor/64x64/apps/: Makefile.am
data/icons/hicolor/scalable/: Makefile.am
data/icons/hicolor/scalable/actions/: Makefile.am
data/icons/hicolor/scalable/apps/: Makefile.am
data/win32/: Makefile.am
