SUBDIRS = CreACEMBLER data

bin_SCRIPTS = $(PACKAGE_TARNAME)$(CREACEMBLER_EXT)

CLEANFILES = $(PACKAGE_TARNAME)$(CREACEMBLER_EXT)
EXTRA_DIST = $(PACKAGE_TARNAME).in
BUILT_SOURCES = $(PACKAGE_TARNAME)$(CREACEMBLER_EXT)

include $(top_srcdir)/edit.mak

$(PACKAGE_TARNAME)$(CREACEMBLER_EXT): Makefile
	rm -f $@ $@.tmp
	$(edit) < '$(srcdir)/$(PACKAGE_TARNAME).in' > $@.tmp
	chmod 0755 $@.tmp
	mv $@.tmp $@

$(PACKAGE_TARNAME)$(CREACEMBLER_EXT): $(PACKAGE_TARNAME).in
